Bug 1951776 part 1: Make ISelectionItemProvider::Select use DoAction for tabs. r=morgan

Even though tabs have the selectable and selected states, Gecko doesn't support TakeSelection on them; you just click (do action) on them.
However, UIA expects that tabs should support setting selection via the SelectionItem pattern.
Tabs do not support the Invoke pattern, which is what you would use to perform the default action on most things; e.g. buttons.
Fix this by calling DoAction for tabs in our ISelectionItemProvider::Select implementation.

Differential Revision: https://phabricator.services.mozilla.com/D255621